--- a/index.html
+++ b/index.html
@@ -23,195 +23,207 @@
     />
   </head>
   <body>
-    <header>
-      <nav class="nav">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-web-header">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-list-items">
-            <a class="nav-list-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-list-items">
-            <a class="nav-list-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-list-items">
-            <a class="nav-list-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-list">
-          <li class="address-list-items">
-            <a class="address-list-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-list-items">
-            <a class="address-list-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="nav">
+          <a class="logo header-logo" href="./index.html"
+            >Web<span class="logo-web-header">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-list-items">
+              <a class="nav-list-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-list-items">
+              <a class="nav-list-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-list-items">
+              <a class="nav-list-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list">
+            <li class="address-list-items">
+              <a class="address-list-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-list-items">
+              <a class="address-list-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="main-page">
-        <h1 class="heading">Effective Solutions for Your Business</h1>
-        <button class="btn" type="button">Order Service</button>
+        <div class="container main-container">
+          <h1 class="heading">Effective Solutions for Your Business</h1>
+          <button class="btn" type="button">Order Service</button>
+        </div>
       </section>
       <section>
-        <h2 class="section-heading" hidden>Section 2</h2>
-        <ul>
-          <li>
-            <h3 class="strategy-list-items">Strategy</h3>
-            <p class="strategy-list-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="strategy-list-items">Punctuality</h3>
-            <p class="strategy-list-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="strategy-list-items">Diligence</h3>
-            <p class="strategy-list-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="strategy-list-items">Technologies</h3>
-            <p class="strategy-list-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-heading" hidden>Section 2</h2>
+          <ul>
+            <li>
+              <h3 class="strategy-list-items">Strategy</h3>
+              <p class="strategy-list-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="strategy-list-items">Punctuality</h3>
+              <p class="strategy-list-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="strategy-list-items">Diligence</h3>
+              <p class="strategy-list-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="strategy-list-items">Technologies</h3>
+              <p class="strategy-list-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team-section">
-        <h2 class="section-heading">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list-items">
-            <img
-              src="./images/img-3.jpg"
-              alt="Photo of Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-names">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-list-items">
-            <img
-              src="./images/img-2.jpg"
-              alt="Photo of Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-names">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-list-items">
-            <img
-              src="./images/img-1.jpg"
-              alt="Photo of Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-names">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-list-items">
-            <img
-              src="./images/img.jpg"
-              alt="Photo of Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-names">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-heading">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-items">
+              <img
+                src="./images/img-3.jpg"
+                alt="Photo of Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-names">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-list-items">
+              <img
+                src="./images/img-2.jpg"
+                alt="Photo of Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-names">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-list-items">
+              <img
+                src="./images/img-1.jpg"
+                alt="Photo of Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-names">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-list-items">
+              <img
+                src="./images/img.jpg"
+                alt="Photo of Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-names">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2 class="section-heading">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-items">
-            <img
-              src="./images/portfolio/img-4.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-heading">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-items">
-            <img
-              src="./images/portfolio/img-3.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-heading">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-items">
-            <img
-              src="./images/portfolio/img-2.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-heading">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li class="portfolio-list-items">
-            <img
-              src="./images/portfolio/img-5.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-heading">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-items">
-            <img
-              src="./images/portfolio/img-1.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-heading">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li class="portfolio-list-items">
-            <img
-              src="./images/portfolio/img.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-list-heading">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-heading">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-items">
+              <img
+                src="./images/portfolio/img-4.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-list-heading">Banking App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-list-items">
+              <img
+                src="./images/portfolio/img-3.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-list-heading">Cashless Payment</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-items">
+              <img
+                src="./images/portfolio/img-2.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-list-heading">Meditation App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-list-items">
+              <img
+                src="./images/portfolio/img-5.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-list-heading">Taxi Service</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-items">
+              <img
+                src="./images/portfolio/img-1.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-list-heading">Screen Illustrations</h3>
+              <p class="portfolio-list-text">Design</p>
+            </li>
+            <li class="portfolio-list-items">
+              <img
+                src="./images/portfolio/img.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-list-heading">Online Courses</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-web-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-web-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
