--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
           <button class="btn" type="button">Order Service</button>
         </div>
       </section>
-      <section>
+      <section class="strategy-section">
         <div class="container">
           <h2 class="section-heading" hidden>Section 2</h2>
-          <ul>
+          <ul class="strategy-list">
             <li>
               <h3 class="strategy-list-items">Strategy</h3>
               <p class="strategy-list-text">
