--- a/index.html
+++ b/index.html
@@ -68,28 +68,28 @@
         <div class="container">
           <h2 class="section-heading" hidden>Section 2</h2>
           <ul class="strategy-list">
-            <li>
+            <li class="strategy-block">
               <h3 class="strategy-list-items">Strategy</h3>
               <p class="strategy-list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="strategy-block">
               <h3 class="strategy-list-items">Punctuality</h3>
               <p class="strategy-list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="strategy-block">
               <h3 class="strategy-list-items">Diligence</h3>
               <p class="strategy-list-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="strategy-block">
               <h3 class="strategy-list-items">Technologies</h3>
               <p class="strategy-list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -101,7 +101,7 @@
       </section>
       <section class="team-section">
         <div class="container">
-          <h2 class="section-heading">Our Team</h2>
+          <h2 class="section-heading section-heading-team">Our Team</h2>
           <ul class="team-list">
             <li class="team-list-items">
               <img
@@ -110,8 +110,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-names">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-box">
+                <h3 class="team-names">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-items">
               <img
@@ -120,8 +122,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-names">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-box">
+                <h3 class="team-names">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-items">
               <img
@@ -130,8 +134,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-names">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-box">
+                <h3 class="team-names">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-items">
               <img
@@ -140,8 +146,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-names">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-box">
+                <h3 class="team-names">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
