--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
           </ul>
         </div>
       </section>
-      <section>
+      <section class="portfolio">
         <div class="container">
-          <h2 class="section-heading">Our Portfolio</h2>
+          <h2 class="section-heading section-heading-portfolio">
+            Our Portfolio
+          </h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-items">
               <img
@@ -165,8 +167,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-heading">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="portfolio-box">
+                <h3 class="portfolio-list-heading">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-items">
               <img
@@ -175,8 +179,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-heading">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-box">
+                <h3 class="portfolio-list-heading">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-items">
               <img
@@ -185,8 +191,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-heading">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="portfolio-box">
+                <h3 class="portfolio-list-heading">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-items">
               <img
@@ -195,8 +203,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-heading">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-box">
+                <h3 class="portfolio-list-heading">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-items">
               <img
@@ -205,8 +215,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-heading">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
+              <div class="portfolio-box">
+                <h3 class="portfolio-list-heading">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-items">
               <img
@@ -215,8 +227,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-list-heading">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="portfolio-box">
+                <h3 class="portfolio-list-heading">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -224,7 +238,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo logo-footer" href="./index.html"
           >Web<span class="logo-web-footer">Studio</span></a
         >
         <p class="footer-text">
