--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </section>
       <section class="strategy-section">
         <div class="container">
-          <h2 class="section-heading" hidden>Section 2</h2>
+          <h2 class="visually-hidden">Section 2</h2>
           <ul class="strategy-list">
             <li class="strategy-block">
               <h3 class="strategy-list-items">Strategy</h3>
