--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <button class="btn" type="button">Order Service</button>
         </div>
       </section>
-      <section class="strategy-section">
+      <section class="strategigy-section">
         <div class="container">
           <h2 class="visually-hidden">Section 2</h2>
           <ul class="strategy-list">
